--- a/.github/workflows/dev-terraform-plan.yml
+++ b/.github/workflows/dev-terraform-plan.yml
@@ -2,7 +2,7 @@ name: Lint, Validate and Plan Dev Infra
 on:
   pull_request:
     branches: [ develop, delete-develop ]
-    types: [ opened, ready_for_review ]
+    types: [ opened, synchronize, reopened, ready_for_review ]
 
 jobs:
   tflint:
