--- a/.github/workflows/dev-terraform-plan.yml
+++ b/.github/workflows/dev-terraform-plan.yml
@@ -22,6 +22,8 @@ jobs:
 
       - uses: terraform-linters/setup-tflint@v2
         name: Setup TFLint
+        with:
+          tflint_version: v0.38.1
 
       - name: Show version
         run: tflint --version
