--- a/.github/workflows/prod-terraform-plan.yml
+++ b/.github/workflows/prod-terraform-plan.yml
@@ -21,6 +21,8 @@ jobs:
 
       - uses: terraform-linters/setup-tflint@v2
         name: Setup TFLint
+        with:
+          tflint_version: v0.38.1
 
       - name: Show version
         run: tflint --version
