--- a/.github/workflows/dev-terraform-plan.yml
+++ b/.github/workflows/dev-terraform-plan.yml
@@ -57,10 +57,12 @@ jobs:
       - name: Terraform Init
         id: init
         run: terraform init
+        continue-on-error: false
 
       - name: Terraform Validate
         id: validate
         run: terraform validate
+        continue-on-error: false
 
       - name: Terraform Create New Workspace
         id: new-workspace
@@ -75,3 +77,4 @@ jobs:
       - name: Terraform Plan
         id: plan
         run: terraform plan -var-file=env/'{{ env.workspace }}'.tfvars
+        continue-on-error: false
