--- a/.github/workflows/dev-terraform-plan.yml
+++ b/.github/workflows/dev-terraform-plan.yml
@@ -76,5 +76,5 @@ jobs:
 
       - name: Terraform Plan
         id: plan
-        run: terraform plan -var-file=env/'{{ env.workspace }}'.tfvars
+        run: terraform plan -var-file=env/dev.tfvars
         continue-on-error: false
