--- a/.github/workflows/prod-terraform-plan.yml
+++ b/.github/workflows/prod-terraform-plan.yml
@@ -75,5 +75,5 @@ jobs:
 
       - name: Terraform Plan
         id: plan
-        run: terraform plan -var-file=env/'{{ env.workspace }}'.tfvars
+        run: terraform plan -var-file=env/prod.tfvars
         continue-on-error: false
